[project]
name = "ctfd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic==1.13.3",
    "aniso8601==9.0.1",
    "async-timeout==4.0.3",
    "attrs==24.2.0",
    "babel==2.16.0",
    "banal==1.0.6",
    "bcrypt==4.0.1",
    "boto3==1.35.27",
    "botocore==1.35.39",
    "cachelib==0.9.0",
    "certifi==2024.8.30",
    "cffi==1.17.1",
    "charset-normalizer==3.4.0",
    "click==8.1.7",
    "cmarkgfm==2022.10.27",
    "colorama==0.4.6",
    "cryptography==43.0.1",
    "dataset==1.6.2",
    "flask-babel==2.0.0",
    "flask-caching==2.0.2",
    "flask-marshmallow==0.10.1",
    "flask-migrate==2.5.3",
    "flask-restx==1.1.0",
    "flask-script==2.0.6",
    "flask-sqlalchemy==2.5.1",
    "flask==2.0.3",
    "freezegun==1.2.2",
    "gevent==23.9.1",
    "greenlet==3.1.1",
    "gunicorn==20.1.0",
    "idna==3.10",
    "itsdangerous==2.2.0",
    "jinja2==3.1.4",
    "jmespath==1.0.1",
    "jsonschema-specifications==2024.10.1",
    "jsonschema==4.23.0",
    "mako==1.3.5",
    "markupsafe==3.0.1",
    "marshmallow-sqlalchemy==0.17.0",
    "marshmallow==2.20.2",
    "maxminddb==1.5.4",
    "nh3==0.2.18",
    "passlib==1.7.4",
    "pillow==10.1.0",
    "pycparser==2.22",
    "pydantic==1.6.2",
    "pymysql==1.0.2",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==0.13.0",
    "python-geoacumen-city==2023.4.15",
    "pytz==2024.2",
    "redis==4.5.5",
    "referencing==0.35.1",
    "requests==2.32.3",
    "rpds-py==0.20.0",
    "s3transfer==0.10.3",
    "setuptools==75.1.0",
    "six==1.16.0",
    "sqlalchemy-utils==0.41.1",
    "sqlalchemy==1.4.48",
    "tenacity==6.2.0",
    "typing-extensions==4.12.2",
    "urllib3==2.2.3",
    "werkzeug==2.0.3",
    "wtforms==2.3.1",
    "zope-event==5.0",
    "zope-interface==7.1.0",
]

[tool.uv]
dev-dependencies = [
    "bandit==1.6.2",
    "coverage==7.2.3",
    "faker==4.1.0",
    "flask-debugtoolbar==0.11.0",
    "flask-profiler==1.8.1",
    "moto==4.1.11",
    "pip-tools==5.4.0",
    "pipdeptree==2.2.0",
    "psycopg2-binary==2.9.6",
    "pytest-cov==4.0.0",
    "pytest-randomly==3.12.0",
    "pytest-sugar==0.9.7",
    "pytest-xdist==3.2.1",
    "pytest==7.3.1",
    "sphinx-rtd-theme==0.4.3",
]
